First cut with Documents

--- a/simulator_config/fhir_expressions_common.conf
+++ b/simulator_config/fhir_expressions_common.conf
@@ -73,6 +73,7 @@ FHIR context_path contains fhir
 METADATA_CP	context_path matches ^.*/fhir/metadata(\?.*)?$
 GETCARERECORD_CP	context_path matches ^.*/fhir/Patient/\$gpc\.getcarerecord(\?.*)?$
 GETSTRUCTUREDRECORD_CP	context_path matches ^.*/fhir/Patient/\$gpc\.getstructuredrecord(\?.*)?$
+SEARCHDOCUMENTREFERENCE_CP	context_path matches ^.*/fhir/Patient/.[^\/]+/DocumentReference(\?.*)?$
 #
 # must be before parameters check since conversion from json wont happen if content-type is wrong
 INVALID_CONTENT_TYPE http_header content-type matches ^.*(text.*|application\/[a-z]+[^+]*)$
