--- a/simulator_config/gpconnect_common_responses.conf
+++ b/simulator_config/gpconnect_common_responses.conf
@@ -52,3 +52,23 @@ operation_outcome_400_sspfrommissing /mnt/encrypted/home/simonfarrow/Documents/T
 operation_outcome_422_ivprt /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_ivprt.xml 422
 operation_outcome_400_ssptoinv /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_ssptoinv.xml 400
 operation_outcome_400_sspfrominv /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_sspfrominv.xml 400
+
+#
+# Document search
+#
+# invalid _include parameters
+# 
+operation_outcome_422_document_search_missing_mandatory_patient /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_missing_mandatory_patient.xml 422
+operation_outcome_422_document_search_missing_mandatory_custodian /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_missing_mandatory_custodian.xml 422
+operation_outcome_422_document_search_missing_mandatory_author_org /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_missing_mandatory_author_org.xml 422
+operation_outcome_422_document_search_missing_mandatory_author_prac /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_missing_mandatory_author_prac.xml 422
+operation_outcome_422_document_search_missing_mandatory_prac_role /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_missing_mandatory_prac_role.xml 422
+# 
+# invalid search parameters
+#
+operation_outcome_422_document_search_facility_invalid_system /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_facility_invalid_system.xml 422
+operation_outcome_422_document_search_author_invalid_system /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_author_invalid_system.xml 422
+operation_outcome_422_document_search_custodian_invalid_system /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_custodian_invalid_system.xml 422
+
+binary_nrf /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_binary_nrf.xml 404
+
