--- a/simulator_config/gpconnect_common_responses.conf
+++ b/simulator_config/gpconnect_common_responses.conf
@@ -52,6 +52,9 @@ operation_outcome_400_sspfrommissing /mnt/encrypted/home/simonfarrow/Documents/T
 operation_outcome_422_ivprt /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_ivprt.xml 422
 operation_outcome_400_ssptoinv /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_ssptoinv.xml 400
 operation_outcome_400_sspfrominv /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_sspfrominv.xml 400
+#
+# diary entries
+operation_outcome_400_multiple_clinical_areas /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_multiple_clinical_areas.xml 400
 
 #
 # Document search
