--- a/simulator_config/gpconnect_common_responses.conf
+++ b/simulator_config/gpconnect_common_responses.conf
@@ -55,6 +55,8 @@ operation_outcome_400_sspfrominv /mnt/encrypted/home/simonfarrow/Documents/TKW5.
 #
 # diary entries
 operation_outcome_400_multiple_clinical_areas /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_multiple_clinical_areas.xml 400
+operation_outcome_422_diary_entries_invalid_search_date /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_diary_entries_invalid_search_date.xml 422
+operation_outcome_422_diary_entries_multiple_search_dates /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_diary_entries_multiple_search_dates.xml 422
 
 #
 # Document search
