Added added search documents created date validation.

--- a/simulator_config/gpconnect_common_responses.conf
+++ b/simulator_config/gpconnect_common_responses.conf
@@ -54,6 +54,9 @@ operation_outcome_400_ssptoinv /mnt/encrypted/home/simonfarrow/Documents/TKW5.0D
 operation_outcome_400_sspfrominv /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_sspfrominv.xml 400
 #
 # diary entries
+#
+
+# Clinical Area checks
 operation_outcome_400_multiple_clinical_areas /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_multiple_clinical_areas.xml 400
 operation_outcome_422_diary_entries_invalid_search_date /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_diary_entries_invalid_search_date.xml 422
 operation_outcome_422_diary_entries_multiple_search_dates /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_diary_entries_multiple_search_dates.xml 422
@@ -75,5 +78,16 @@ operation_outcome_422_document_search_facility_invalid_system /mnt/encrypted/hom
 operation_outcome_422_document_search_author_invalid_system /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_author_invalid_system.xml 422
 operation_outcome_422_document_search_custodian_invalid_system /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_custodian_invalid_system.xml 422
 
+# 
+# invalid created parameters
+#
+operation_outcome_422_document_search_created_more_than_2 /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_created_more_than_2.xml 422
+operation_outcome_422_document_search_no_created_ge /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_no_created_ge.xml 422
+operation_outcome_422_document_search_no_created_le /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_no_created_le.xml 422
+operation_outcome_422_document_search_no_created_le_or_ge /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_no_created_le_or_ge.xml 422
+
+# 
+# Read Binary
+#
 binary_nrf /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_binary_nrf.xml 404
 
