Added rules expression of type Class allowing java extensions for comparing fhir dates extracted from text sources via reg exps.

--- a/simulator_config/gpconnect_common_responses.conf
+++ b/simulator_config/gpconnect_common_responses.conf
@@ -85,6 +85,7 @@ operation_outcome_422_document_search_created_more_than_2 /mnt/encrypted/home/si
 operation_outcome_422_document_search_no_created_ge /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_no_created_ge.xml 422
 operation_outcome_422_document_search_no_created_le /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_no_created_le.xml 422
 operation_outcome_422_document_search_no_created_le_or_ge /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_no_created_le_or_ge.xml 422
+operation_outcome_422_document_search_created_ge_after_le /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_created_ge_after_le.xml 422
 
 # 
 # Read Binary
