Added Ssp-To check.

--- a/simulator_config/fhir_rules_common.conf
+++ b/simulator_config/fhir_rules_common.conf
@@ -31,6 +31,7 @@ IF FHIR and SSP_INTERACTIONID_MISSING then operation_outcome_400_intidmissing
 IF FHIR and SSP_TRACEID_MISSING  then operation_outcome_400_traceidmissing
 IF FHIR and SSP_TO_MISSING  then operation_outcome_400_ssptomissing
 IF FHIR and SSP_TO_INCORRECT  then operation_outcome_400_ssptoinv
+IF FHIR and SSP_TO_MISMATCH  then operation_outcome_400_ssptomismatch
 IF FHIR and SSP_FROM_MISSING then operation_outcome_400_sspfrommissing
 IF FHIR and SSP_FROM_INCORRECT  then operation_outcome_400_sspfrominv
 IF FHIR and JWT_HEADER_INVALID then operation_outcome_499
