--- a/simulator_config/gpconnect_common_responses.conf
+++ b/simulator_config/gpconnect_common_responses.conf
@@ -51,6 +51,7 @@ operation_outcome_400_ssptomissing /mnt/encrypted/home/simonfarrow/Documents/TKW
 operation_outcome_400_sspfrommissing /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_sspfrommissing.xml 400
 operation_outcome_422_ivprt /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_ivprt.xml 422
 operation_outcome_400_ssptoinv /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_ssptoinv.xml 400
+operation_outcome_400_ssptomismatch /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_ssptomismatch.xml 400
 operation_outcome_400_sspfrominv /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_sspfrominv.xml 400
 #
 # diary entries
