Improvements to Spp-to checking.

--- a/simulator_config/fhir_expressions_common.conf
+++ b/simulator_config/fhir_expressions_common.conf
@@ -52,7 +52,7 @@ AUTHORIZATION_MISSING http_header Authorization notmatches ^.+$
 SSP_INTERACTIONID_MISSING http_header Ssp-InteractionID notmatches ^.+$
 SSP_TRACEID_MISSING http_header Ssp-TraceID notmatches ^.+$
 SSP_TO_MISSING http_header Ssp-To notmatches ^.+$
-SSP_TO_MISMATCH Class uk.nhs.digital.mait.tkwx.tk.internalservices.rules.CheckConfiguredSspTo http_header Ssp-To "^(.*)$" "$1" "/mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/external/gpconnect-demonstrator-api.properties" "/mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/external/gpconnect-demonstrator-api.environment.properties" "gp.connect.provider.routing.filename"
+SSP_TO_MISMATCH Class uk.nhs.digital.mait.tkwx.tk.internalservices.rules.CheckConfiguredSspTo http_header Ssp-To "^(.*)$" "$1" "/mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/external/gpconnect-demonstrator-api.properties" "/mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/external/gpconnect-demonstrator-api.environment.properties" "gp.connect.provider.routing.filename" "/mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/external/external/gpconnect-demonstrator-api.environment.properties" "gp.connect.provider.routing.filename"
 # currently the Answer provider test suite sends 123456789123 as an invalid ASID which this wont pick up
 SSP_TO_INCORRECT http_header Ssp-To notmatches ^[0-9]{12}$
 # more specific
