Checks adjusted for URL encoding, experimental mods for default external values, check for bad parameters on doc search.

--- a/simulator_config/gpconnect_common_responses.conf
+++ b/simulator_config/gpconnect_common_responses.conf
@@ -65,6 +65,8 @@ operation_outcome_422_diary_entries_multiple_search_dates /mnt/encrypted/home/si
 #
 # Document search
 #
+operation_outcome_422_document_search_invalid_parameters /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_invalid_parameters.xml 422
+# #
 # invalid _include parameters
 # 
 operation_outcome_422_document_search_missing_mandatory_patient /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_document_search_missing_mandatory_patient.xml 422
