Move to TKW_ROOT.

--- a/simulator_config/fhir_expressions_common.conf
+++ b/simulator_config/fhir_expressions_common.conf
@@ -33,8 +33,8 @@ JWT_PAYLOAD_NO_REQUESTED_RECORD jwt_payload xpathnotexists /json:json/json:reque
 #
 JWT_PAYLOAD_NO_IAT jwt_payload xpathnotexists /json:json/@iat
 JWT_PAYLOAD_NO_EXP jwt_payload xpathnotexists /json:json/@exp
-JWT_PAYLOAD_CREATION_TIME_IN_THE_FUTURE jwt_payload xslt /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/future_creation_time.xslt TRUE
-JWT_PAYLOAD_CREATION_TIME_IN_THE_PAST jwt_payload xslt /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/simulator_config/past_creation_time.xslt TRUE
+JWT_PAYLOAD_CREATION_TIME_IN_THE_FUTURE jwt_payload xslt TKW_ROOT/config/GP_CONNECT/simulator_config/future_creation_time.xslt TRUE
+JWT_PAYLOAD_CREATION_TIME_IN_THE_PAST jwt_payload xslt TKW_ROOT/config/GP_CONNECT/simulator_config/past_creation_time.xslt TRUE
 JWT_EXP_EARLIER_THAN_CREATION jwt_payload xpathequals boolean(/json:json/@exp < /json:json/@iat) true
 JWT_EXP_TOO_SOON jwt_payload xpathequals boolean(number(/json:json/@exp) - number(/json:json/@iat) < 300) true
 JWT_EXP_TOO_LATE jwt_payload xpathequals boolean(number(/json:json/@exp) - number(/json:json/@iat) > 300) true
@@ -52,7 +52,7 @@ AUTHORIZATION_MISSING http_header Authorization notmatches ^.+$
 SSP_INTERACTIONID_MISSING http_header Ssp-InteractionID notmatches ^.+$
 SSP_TRACEID_MISSING http_header Ssp-TraceID notmatches ^.+$
 SSP_TO_MISSING http_header Ssp-To notmatches ^.+$
-SSP_TO_MISMATCH Class uk.nhs.digital.mait.tkwx.tk.internalservices.rules.CheckConfiguredSspTo http_header Ssp-To "^(.*)$" "$1" "/mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/internal/gpconnect-demonstrator-api.properties" "/mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/internal/gpconnect-demonstrator-api.environment.properties" "/mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/config/GP_CONNECT/external/gpconnect-demonstrator-api.environment.properties" "gp.connect.provider.routing.filename"
+SSP_TO_MISMATCH Class uk.nhs.digital.mait.tkwx.tk.internalservices.rules.CheckConfiguredSspTo http_header Ssp-To "^(.*)$" "$1" "TKW_ROOT/config/GP_CONNECT/internal/gpconnect-demonstrator-api.properties" "TKW_ROOT/config/GP_CONNECT/internal/gpconnect-demonstrator-api.environment.properties" "TKW_ROOT/config/GP_CONNECT/external/gpconnect-demonstrator-api.environment.properties" "gp.connect.provider.routing.filename"
 # currently the Answer provider test suite sends 123456789123 as an invalid ASID which this wont pick up
 SSP_TO_INCORRECT http_header Ssp-To notmatches ^[0-9]{12}$
 # more specific
