--- a/validator_config/validator.conf
+++ b/validator_config/validator.conf
@@ -16,13 +16,13 @@ VALIDATE urn:nhs:names:services:gpconnect:fhir:operation:gpc.getcarerecord
 #CHECK hapifhirvalidator
 
 #Schema Check on whole message
-#CHECK schema /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/contrib/DMS_Schema/FGM/Schemas/bundle.xsd
+#CHECK schema TKW_ROOT/contrib/DMS_Schema/FGM/Schemas/bundle.xsd
 
 #Transform Checks
-CHECK xslt /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/contrib/Common/xslt/blank_attribute_checker.xslt ERROR
+CHECK xslt TKW_ROOT/contrib/Common/xslt/blank_attribute_checker.xslt ERROR
 ANNOTATION "WARNING ONLY - test shows as fail if XML contains blank attributes"
 
-CHECK xslt /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/contrib/Common/xslt/IllegalCharacters.xslt ERROR
+CHECK xslt TKW_ROOT/contrib/Common/xslt/IllegalCharacters.xslt ERROR
 ANNOTATION "WS-STD-01: Toolkit Messages MUST use UTF-8 encoding. Illegal character check may flag up some valid unicode characters, as it is not an exhaustive check. It will locate the use of non-rendering unicode control characters within the payload, sometimes erroneously introduced."
 
 IF xpathexists /fhir:Parameters
@@ -64,14 +64,14 @@ IF xpathequals boolean(/*[contains(local-name(),'Conformance') or contains(local
 THEN
 	## response success 
 	#Schema Check on whole message
-	#CHECK schema /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/contrib/DMS_Schema/FGM/Schemas/bundle.xsd
+	#CHECK schema TKW_ROOT/contrib/DMS_Schema/FGM/Schemas/bundle.xsd
 	#ANNOTATION Schema check (incorrect schema!)
 
 	#Transform Checks
-	#CHECK xslt /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/contrib/Common/xslt/blank_attribute_checker.xslt ERROR
+	#CHECK xslt TKW_ROOT/contrib/Common/xslt/blank_attribute_checker.xslt ERROR
 	#ANNOTATION "WARNING ONLY - test shows as fail if XML contains blank attributes"
 
-	#CHECK xslt /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/contrib/Common/xslt/IllegalCharacters.xslt ERROR
+	#CHECK xslt TKW_ROOT/contrib/Common/xslt/IllegalCharacters.xslt ERROR
 	#ANNOTATION "WS-STD-01: Toolkit Messages MUST use UTF-8 encoding. Illegal character check may flag up some valid unicode characters, as it is not an exhaustive check. It will locate the use of non-rendering unicode control characters within the payload, sometimes erroneously introduced."
 
 	CHECK hapifhirvalidator
@@ -105,14 +105,14 @@ THEN
 	CHECK hapifhirvalidator
 	## response success 
 	#Schema Check on whole message
-	#CHECK schema /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/contrib/DMS_Schema/FGM/Schemas/bundle.xsd
+	#CHECK schema TKW_ROOT/contrib/DMS_Schema/FGM/Schemas/bundle.xsd
 	#ANNOTATION Schema check (incorrect schema!)
 
 	#Transform Checks
-	#CHECK xslt /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/contrib/Common/xslt/blank_attribute_checker.xslt ERROR
+	#CHECK xslt TKW_ROOT/contrib/Common/xslt/blank_attribute_checker.xslt ERROR
 	#ANNOTATION "WARNING ONLY - test shows as fail if XML contains blank attributes"
 
-	#CHECK xslt /mnt/encrypted/home/simonfarrow/Documents/TKW5.0Dev/TKW/contrib/Common/xslt/IllegalCharacters.xslt ERROR
+	#CHECK xslt TKW_ROOT/contrib/Common/xslt/IllegalCharacters.xslt ERROR
 	#ANNOTATION "WS-STD-01: Toolkit Messages MUST use UTF-8 encoding. Illegal character check may flag up some valid unicode characters, as it is not an exhaustive check. It will locate the use of non-rendering unicode control characters within the payload, sometimes erroneously introduced."
 	IF xpathexists /fhir:CapabilityStatement
 	THEN
