Mods for diary entries search date checks.

--- a/simulator_config/gpconnect_common_responses.conf
+++ b/simulator_config/gpconnect_common_responses.conf
@@ -62,6 +62,7 @@ operation_outcome_400_sspfrominv TKW_ROOT/config/GP_CONNECT/simulator_config/ope
 operation_outcome_400_multiple_clinical_areas TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_multiple_clinical_areas.xml 400
 operation_outcome_422_diary_entries_invalid_search_date TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_diary_entries_invalid_search_date.xml 422
 operation_outcome_422_diary_entries_multiple_search_dates TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_diary_entries_multiple_search_dates.xml 422
+operation_outcome_422_diary_entries_search_date_in_past TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_diary_entries_search_date_in_past.xml 422
 
 #
 # Document search
