Removed all uses of the generic operation outrcome.
Addresses issue: #3

--- a/simulator_config/fhir_rules_common.conf
+++ b/simulator_config/fhir_rules_common.conf
@@ -35,7 +35,7 @@ IF FHIR and SSP_TO_INCORRECT  then operation_outcome_400_ssptoinv
 IF FHIR and SSP_TO_MISMATCH  then operation_outcome_400_ssptomismatch
 IF FHIR and SSP_FROM_MISSING then operation_outcome_400_sspfrommissing
 IF FHIR and SSP_FROM_INCORRECT  then operation_outcome_400_sspfrominv
-IF FHIR and JWT_HEADER_INVALID then operation_outcome_499
+IF FHIR and JWT_HEADER_INVALID then operation_outcome_499_invalid_jwt_header
 IF FHIR and JWT_PAYLOAD_INVALID_REQUESTING_PRACTITIONER_RESOURCE_TYPE then operation_outcome_422_ivprt
 IF FHIR and JWT_PADDING then operation_outcome_400_pad
 IF FHIR and JWT_NOT_BASE64_URL_ENCODED then operation_outcome_400_jwtnotb64
