--- a/simulator_config/gpconnect_common_responses.conf
+++ b/simulator_config/gpconnect_common_responses.conf
@@ -1,5 +1,5 @@
 #
-# Common fhir/gcpnnect responses
+# Common fhir/gconnect responses
 #
 operation_outcome_422_ce TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_ce.xml 422
 #
@@ -8,21 +8,30 @@ patient_lid_not_found_response	TKW_ROOT/config/GP_CONNECT/simulator_config/opera
 operation_outcome_403 TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_npc.xml 403
 operation_outcome_400_rqorgscope TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_rqorgscope.xml 400
 operation_outcome_400_intidcpmismatch TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_intidcpmismatch.xml 400
-operation_outcome_400 TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome.xml 400
 operation_outcome_400_jwtnotb64 TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_jwtnotb64.xml 400
 operation_outcome_400_ivnnn TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_ivnnn.xml 400
 operation_outcome_422_iis TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_iis.xml 422
-operation_outcome_404 TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome.xml 404 $v = "99"
-operation_outcome_400_reset TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome.xml 400 $v = 
-operation_outcome_415 TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome.xml 415
-operation_outcome_422 TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome.xml 422
+#
+operation_outcome_404 TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome.xml 404
+# session variable responses
+# NB uses generic operation outcome
+#operation_outcome_404 TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome.xml 404 $v = "99"
+# NB uses generic operation outcome
+#operation_outcome_400_reset TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome.xml 400 $v = 
+#
+operation_outcome_415_invalid_accept TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_invalid_accept.xml 415
+operation_outcome_415_invalid_content_type TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_invalid_content_type.xml 415
+operation_outcome_422_invalid_nhsno_system TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_invalid_nhsno_system.xml 422
 operation_outcome_422_ivr TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_ivr.xml 422
 operation_outcome_422_ivp TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_ivp.xml 422
-operation_outcome_499 TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome.xml 499
+operation_outcome_499_invalid_jwt_header TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_invalid_jwt_header.xml 499
 #
 # JWT
 #
 operation_outcome_400_am TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_am.xml 400
+operation_outcome_400_no_content TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_no_content.xml 400
+operation_outcome_400_nnn_mismatch TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_nnn_mismatch.xml 400
+operation_outcome_400_multiple_nnn TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_multiple_nnn.xml 400
 operation_outcome_400_ndc TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_ndc.xml 400
 operation_outcome_400_pi TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_pi.xml 400
 operation_outcome_400_nrd TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_nrd.xml 400
@@ -34,6 +43,7 @@ operation_outcome_400_noiss TKW_ROOT/config/GP_CONNECT/simulator_config/operatio
 operation_outcome_400_noaud TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_noaud.xml 400
 operation_outcome_400_nosub TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_nosub.xml 400
 operation_outcome_400_noscope TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_noscope.xml 400
+operation_outcome_400_nopatreadscope TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_nopatreadscope.xml 400
 operation_outcome_400_norqorg TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_norqorg.xml 400
 operation_outcome_400_norqprac TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_norqprac.xml 400
 operation_outcome_422_invrqprac TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_invrqprac.xml 422
