--- a/tkw-x-forwarding.properties
+++ b/tkw-x-forwarding.properties
@@ -204,7 +204,7 @@ tks.transmitter.send.chunksize 0
 tks.synchronousreply.delay 20
 
 # added scf 
-tks.httpinterceptor.inhibit.validation N
+tks.httpinterceptor.inhibit.validation Y
 #
 # added scf C means dump to console string can be concat of Y (log) and or C
 tks.debug.simulatordebugmode C
