New namespaces for mavenised tkw-x.

--- a/legacy_files/tkw_forward_all.properties
+++ b/legacy_files/tkw_forward_all.properties
@@ -75,7 +75,7 @@ tks.httpinterceptor.itk.discriminator replace(replace(/SOAP:Envelope/SOAP:Header
 #
 # Http Response Headers
 #
-#tks.httpinterceptor.httpheader.testheader function:org.warlock.tk.internalservices.testautomation.PropertySetFunctions.getJWT TKW_ROOT/config/GP_CONNECT/jwt_template_no_smartcard.txt practitionerid 9651986204 secret
+#tks.httpinterceptor.httpheader.testheader function:uk.nhs.digital.mait.tkwx.internalservices.testautomation.PropertySetFunctions.getJWT TKW_ROOT/config/GP_CONNECT/jwt_template_no_smartcard.txt practitionerid 9651986204 secret
 # added for Answer cumumber tests NB Pragma was required to be Camel case for some reason
 tks.httpinterceptor.httpheader.Cache-Control  no-store
 tks.httpinterceptor.httpheader.expires 0
@@ -101,7 +101,7 @@ tks.processors.configurationfile TKW_ROOT/contrib/Common/simulator_packs/lib/tes
 #
 # rest rules engine
 #
-tks.rules.engineclass org.warlock.tk.internalservices.rules.RESTfulRulesEngine
+tks.rules.engineclass uk.nhs.digital.mait.tkwx.internalservices.rules.RESTfulRulesEngine
 #
 # Queues config file format is:
 # name class
@@ -148,7 +148,7 @@ tks.transmitter.httpheader.Ssp-To 200000000359
 tks.transmitter.httpheader.Ssp-TraceID __TRACE_ID__
 #tks.transmitter.httpheader.Ssp-InteractionID  urn:nhs:names:services:gpconnect:fhir:rest:read:metadata
 tks.transmitter.httpheader.Ssp-InteractionID  urn:nhs:names:services:gpconnect:fhir:operation:gpc.getcarerecord
-tks.transmitter.httpheader.Authorization function:org.warlock.tk.internalservices.testautomation.PropertySetFunctions.getJWT TKW_ROOT/contrib/TKWAutotestManager/tstp/WebServices/host/GP_CONNECT/gp_connect_jwt_template.txt practitionerid 9476719931 secret true
+tks.transmitter.httpheader.Authorization function:uk.nhs.digital.mait.tkwx.internalservices.testautomation.PropertySetFunctions.getJWT TKW_ROOT/contrib/TKWAutotestManager/tstp/WebServices/host/GP_CONNECT/gp_connect_jwt_template.txt practitionerid 9476719931 secret true
 tks.transmitter.httpheader.Content-type application/xml+fhir
 
 #
@@ -173,7 +173,7 @@ tks.debug.displaydigestvalues No
 tks.HttpTransport.namelist getepoch
 #
 # unix epoch service
-tks.HttpTransport.getepoch.class org.warlock.tk.handlers.HTTPGetUnixTimestampHandler
+tks.HttpTransport.getepoch.class uk.nhs.digital.mait.tkwx.handlers.HTTPGetUnixTimestampHandler
 tks.HttpTransport.getepoch.path /getepoch
 # 
 # And then the definitions needed by each of these
@@ -185,15 +185,15 @@ tks.HttpTransport.BADURI.path /
 tks.phxmlconverter.clustermap TKW_ROOT/config/GP_CONNECT/validator_config/query_response_clusters.map
 # 
 # Schema validator check type handler mapping
-tks.validator.check.schema org.warlock.tk.internalservices.validation.SchemaValidator
+tks.validator.check.schema uk.nhs.digital.mait.tkwx.internalservices.validation.SchemaValidator
 
 # added scf 29/8/17
-tks.validator.check.matches	org.warlock.tk.internalservices.validation.TextAssertionValidator
-tks.validator.check.notmatches	org.warlock.tk.internalservices.validation.TextAssertionValidator
-tks.validator.check.equals	org.warlock.tk.internalservices.validation.TextAssertionValidator
-tks.validator.check.notequals	org.warlock.tk.internalservices.validation.TextAssertionValidator
-tks.validator.check.contains	org.warlock.tk.internalservices.validation.TextAssertionValidator
-tks.validator.check.notcontains	org.warlock.tk.internalservices.validation.TextAssertionValidator
+tks.validator.check.matches	uk.nhs.digital.mait.tkwx.internalservices.validation.TextAssertionValidator
+tks.validator.check.notmatches	uk.nhs.digital.mait.tkwx.internalservices.validation.TextAssertionValidator
+tks.validator.check.equals	uk.nhs.digital.mait.tkwx.internalservices.validation.TextAssertionValidator
+tks.validator.check.notequals	uk.nhs.digital.mait.tkwx.internalservices.validation.TextAssertionValidator
+tks.validator.check.contains	uk.nhs.digital.mait.tkwx.internalservices.validation.TextAssertionValidator
+tks.validator.check.notcontains	uk.nhs.digital.mait.tkwx.internalservices.validation.TextAssertionValidator
 
 # added by TKWPropertiesEditor on Fri Mar 18 16:51:21 GMT 2016
 #tks.transmitter.send.chunksize 0
