--- a/legacy_files/tkw_secure.properties
+++ b/legacy_files/tkw_secure.properties
@@ -72,7 +72,7 @@ tks.httpinterceptor.itk.discriminator replace(replace(/SOAP:Envelope/SOAP:Header
 #
 # Http Response Headers
 #
-#tks.httpinterceptor.httpheader.testheader function:org.warlock.tk.internalservices.testautomation.PropertySetFunctions.getJWT TKW_ROOT/config/GP_CONNECT/jwt_template_no_smartcard.txt practitionerid 9651986204 secret
+#tks.httpinterceptor.httpheader.testheader function:uk.nhs.digital.mait.tkwx.internalservices.testautomation.PropertySetFunctions.getJWT TKW_ROOT/config/GP_CONNECT/jwt_template_no_smartcard.txt practitionerid 9651986204 secret
 # added for Answer cumumber tests NB Pragma was required to be Camel case for some reason
 tks.httpinterceptor.httpheader.Cache-Control no-store
 tks.httpinterceptor.httpheader.expires 0
@@ -98,7 +98,7 @@ tks.processors.configurationfile TKW_ROOT/contrib/Common/simulator_packs/lib/tes
 #
 # rest rules engine
 #
-tks.rules.engineclass org.warlock.tk.internalservices.rules.RESTfulRulesEngine
+tks.rules.engineclass uk.nhs.digital.mait.tkwx.internalservices.rules.RESTfulRulesEngine
 #
 # Queues config file format is:
 # name class
@@ -142,11 +142,11 @@ tks.transmitter.includesigner No
 
 tks.transmitter.httpheader.Ssp-From 200000000359
 tks.transmitter.httpheader.Ssp-To 200000000359
-tks.transmitter.httpheader.Ssp-TraceID function:org.warlock.tk.internalservices.testautomation.PropertySetFunctions.getuuid
+tks.transmitter.httpheader.Ssp-TraceID function:uk.nhs.digital.mait.tkwx.internalservices.testautomation.PropertySetFunctions.getuuid
 #tks.transmitter.httpheader.Ssp-InteractionID  urn:nhs:names:services:gpconnect:fhir:rest:read:metadata
 tks.transmitter.httpheader.Ssp-InteractionID urn:nhs:names:services:gpconnect:fhir:operation:gpc.getcarerecord
-#tks.transmitter.httpheader.Authorization function:org.warlock.tk.internalservices.testautomation.PropertySetFunctions.getJWT TKW_ROOT/contrib/TKWAutotestManager/tstp/WebServices/host/GP_CONNECT/jwt_templates/gp_connect_jwt_template.txt practitionerid 9476719931 secret true
-tks.transmitter.httpheader.Authorization function:org.warlock.tk.internalservices.testautomation.PropertySetFunctions.getJWT TKW_ROOT/contrib/TKWAutotestManager/tstp/WebServices/host/GP_CONNECT/jwt_templates/gp_connect_jwt_template.txt practitionerid 9658218873 secret true
+#tks.transmitter.httpheader.Authorization function:uk.nhs.digital.mait.tkwx.internalservices.testautomation.PropertySetFunctions.getJWT TKW_ROOT/contrib/TKWAutotestManager/tstp/WebServices/host/GP_CONNECT/jwt_templates/gp_connect_jwt_template.txt practitionerid 9476719931 secret true
+tks.transmitter.httpheader.Authorization function:uk.nhs.digital.mait.tkwx.internalservices.testautomation.PropertySetFunctions.getJWT TKW_ROOT/contrib/TKWAutotestManager/tstp/WebServices/host/GP_CONNECT/jwt_templates/gp_connect_jwt_template.txt practitionerid 9658218873 secret true
 
 #tks.transmitter.httpheader.Content-type application/xml+fhir
 tks.transmitter.httpheader.Content-type application/json+fhir
@@ -176,7 +176,7 @@ tks.debug.displaydigestvalues No
 tks.HttpTransport.namelist getepoch
 #
 # unix epoch service
-tks.HttpTransport.getepoch.class org.warlock.tk.handlers.HTTPGetUnixTimestampHandler
+tks.HttpTransport.getepoch.class uk.nhs.digital.mait.tkwx.handlers.HTTPGetUnixTimestampHandler
 tks.HttpTransport.getepoch.path /getepoch
 # 
 # And then the definitions needed by each of these
@@ -188,15 +188,15 @@ tks.HttpTransport.BADURI.path /
 tks.phxmlconverter.clustermap TKW_ROOT/config/GP_CONNECT/validator_config/query_response_clusters.map
 # 
 # Schema validator check type handler mapping
-tks.validator.check.schema org.warlock.tk.internalservices.validation.SchemaValidator
+tks.validator.check.schema uk.nhs.digital.mait.tkwx.internalservices.validation.SchemaValidator
 
 # added scf 29/8/17
-tks.validator.check.matches org.warlock.tk.internalservices.validation.TextAssertionValidator
-tks.validator.check.notmatches org.warlock.tk.internalservices.validation.TextAssertionValidator
-tks.validator.check.equals org.warlock.tk.internalservices.validation.TextAssertionValidator
-tks.validator.check.notequals org.warlock.tk.internalservices.validation.TextAssertionValidator
-tks.validator.check.contains org.warlock.tk.internalservices.validation.TextAssertionValidator
-tks.validator.check.notcontains org.warlock.tk.internalservices.validation.TextAssertionValidator
+tks.validator.check.matches uk.nhs.digital.mait.tkwx.internalservices.validation.TextAssertionValidator
+tks.validator.check.notmatches uk.nhs.digital.mait.tkwx.internalservices.validation.TextAssertionValidator
+tks.validator.check.equals uk.nhs.digital.mait.tkwx.internalservices.validation.TextAssertionValidator
+tks.validator.check.notequals uk.nhs.digital.mait.tkwx.internalservices.validation.TextAssertionValidator
+tks.validator.check.contains uk.nhs.digital.mait.tkwx.internalservices.validation.TextAssertionValidator
+tks.validator.check.notcontains uk.nhs.digital.mait.tkwx.internalservices.validation.TextAssertionValidator
 
 # added scf 1/5/18 hapifhir validation NB This is STU3 whereas 0.5 is actually DSTU2
 tks.validator.hapifhirvalidator.assetdir.0 TKW_ROOT/config/GP_CONNECT/validator_config/fhir_assets/STU3-FHIR-Assets/CodeSystems
@@ -211,7 +211,7 @@ tks.validator.hapifhirvalidator.schemavalidate Y
 tks.validator.hapifhirvalidator.schematronvalidate N
 tks.validator.hapifhirvalidator.noterminologychecks N
 tks.validator.hapifhirvalidator.minimumreportlevel INFORMATION
-tks.validator.check.hapifhirvalidator org.warlock.tk.internalservices.validation.hapifhir.HapiFhirValidator
+tks.validator.check.hapifhirvalidator uk.nhs.digital.mait.tkwx.internalservices.validation.hapifhir.HapiFhirValidator
 
 # added by TKWPropertiesEditor on Fri Mar 18 16:51:21 GMT 2016
 #tks.transmitter.send.chunksize 0
