Fixed bad parameter check for Document Search, Beefed up some Operation Outcomes

--- a/simulator_config/gpconnect_common_responses.conf
+++ b/simulator_config/gpconnect_common_responses.conf
@@ -11,6 +11,7 @@ operation_outcome_400_intidcpmismatch TKW_ROOT/config/GP_CONNECT/simulator_confi
 operation_outcome_400_jwtnotb64 TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_jwtnotb64.xml 400
 operation_outcome_400_ivnnn TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_ivnnn.xml 400
 operation_outcome_422_iis TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_iis.xml 422
+operation_outcome_422_ivcp TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_ivcp.xml 422
 #
 operation_outcome_404 TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome.xml 404
 # session variable responses
