Added first cut of SDS adapter

--- a/tkw-x-forwarding.properties
+++ b/tkw-x-forwarding.properties
@@ -134,7 +134,7 @@ tks.validator.reports TKW_ROOT/config/GP_CONNECT/validator_reports
 # Additional Port names for the request handlers (These are in addition to those loaded from the internal properties)
 #
 #tks.HttpTransport.namelist qrequest qreqitk phsyncsoap phasyncsoap
-tks.HttpTransport.namelist getepoch resetstatevariables
+tks.HttpTransport.namelist getepoch resetstatevariables getuuid
 #
 # unix epoch service
 tks.HttpTransport.getepoch.class uk.nhs.digital.mait.tkwx.tk.handlers.HTTPGetUnixTimestampHandler
@@ -143,6 +143,10 @@ tks.HttpTransport.getepoch.path /getepoch
 # reset simulator session state
 tks.HttpTransport.resetstatevariables.class uk.nhs.digital.mait.tkwx.tk.handlers.HTTPPutResetSimulatorStateVariablesHandler
 tks.HttpTransport.resetstatevariables.path /resetsimulatorstatevariables
+
+# get uuid
+tks.HttpTransport.getuuid.class uk.nhs.digital.mait.tkwx.tk.handlers.HTTPGetUUIDHandler
+tks.HttpTransport.getuuid.path /getuuid
 # 
 # And then the definitions needed by each of these
 #
