Added in situ dockerisation for consistency

--- a/validator_config/validator.conf
+++ b/validator_config/validator.conf
@@ -310,3 +310,6 @@ ELSE
 	CHECK content xpathexists /fhir:OperationOutcome
 	ANNOTATION Get slots fail check
 END IF
+
+VALIDATE urn:nhs:names:services:gpconnect:fhir:operation:gpc.migratestructuredrecord-1
+	CHECK hapifhirvalidator
