First cut at 1.5.1

--- a/.dockerignore
+++ b/.dockerignore
@@ -4,6 +4,7 @@
 # With these exceptions:
 !/simulator_config/**
 !/validator_config/**
+!/certs/**
 !/tkw-x-forwarding.properties
 !/set-all-configurations.sh
 !/runtkwfhirvalidator.sh
