--- a/simulator_config/fhir_expressions_common.conf
+++ b/simulator_config/fhir_expressions_common.conf
@@ -6,7 +6,9 @@ JWT_HEADER_INVALID jwt_header xpathnotin /json:json/@alg "HS256" "none"
 #
 # JWT Payload checks
 #
-JWT_PAYLOAD_REASON_FOR_REQUEST_NOT_DIRECTCARE jwt_payload xpathnotequals /json:json/@reason_for_request directcare
+JWT_PAYLOAD_REASON_FOR_REQUEST_DIRECTCARE jwt_payload xpathequals /json:json/@reason_for_request directcare
+# at 1.5.1
+JWT_PAYLOAD_REASON_FOR_REQUEST_MIGRATION jwt_payload xpathequals /json:json/@reason_for_request migration
 # this is not a valid test for 1.n it is for 0.n
 JWT_PAYLOAD_INCORRECT jwt_payload notcontains https://authorize.fhir.nhs.net/token
 JWT_PAYLOAD_NO_ISS jwt_payload xpathnotexists /json:json/@iss
