--- a/simulator_config/fhir_rules_common.conf
+++ b/simulator_config/fhir_rules_common.conf
@@ -5,7 +5,7 @@
 IF FHIR and FHIR_CONVERSION_FAILED then operation_outcome_422_ce
 #
 IF FHIR and AUTHORIZATION_MISSING then operation_outcome_400_am
-IF FHIR and JWT_PAYLOAD_REASON_FOR_REQUEST_NOT_DIRECTCARE then operation_outcome_400_ndc
+IF FHIR and not JWT_PAYLOAD_REASON_FOR_REQUEST_DIRECTCARE then operation_outcome_400_ndc
 # Disabled for 1.n and hackathon
 #IF FHIR and JWT_PAYLOAD_INCORRECT then operation_outcome_400_pi
 IF FHIR and JWT_PAYLOAD_NO_REQUESTING_DEVICE then operation_outcome_400_nrd
