--- a/tkw-x-forwarding.properties
+++ b/tkw-x-forwarding.properties
@@ -5,8 +5,11 @@
 #
 # A name for this particular configuration, used for logging
 #
-tks.configname FHIR_GPCONNECT forwarding all ==> https://orange.testlab.nhs.uk:443
+#tks.configname FHIR_GPCONNECT forwarding all ==> https://orange.testlab.nhs.uk:443
 #tks.configname FHIR_GPCONNECT forwarding all ==> https://messagingportal.opentest.hscic.gov.uk:19192
+tks.configname FHIR_GPCONNECT forwarding all ==> 127.0.0.1:5000
+# dcokerised 
+#tks.configname FHIR_GPCONNECT forwarding all ==> gpconnect-api:19191
 #
 # The name of the user or organisation, used for logging (should be set by the installer)
 #
@@ -15,7 +18,7 @@ tks.username __USER_NAME_AND_ORGANISATION_NOT_SET__
 # Do we listen for or send over TLS ?
 #
 tks.receivetls No
-tks.sendtls Yes
+tks.sendtls No
 #
 # If we do, these govern the keystore and CA locations and access
 # nb if run form a docker image these values are overriddeny by envt variables in the docker-compose yml file
@@ -55,12 +58,18 @@ tks.HttpTransport.adminlistenaddr localhost
 tks.HttpTransport.adminlistenport 8001
 #
 # The Http interceptor requires a forwarder address and port for passing requests on 
-#tks.httpinterceptor.forwardingaddress 127.0.0.1
-#tks.httpinterceptor.forwardingport 5000
+tks.httpinterceptor.forwardingaddress 127.0.0.1
+tks.httpinterceptor.forwardingport 5000
 
-tks.httpinterceptor.forwardingaddress orange.testlab.nhs.uk
-tks.httpinterceptor.forwardingport 443
+# dcokerised
+#tks.httpinterceptor.forwardingaddress gpconnect-api
+#tks.httpinterceptor.forwardingport 19191
 
+# public orange
+#tks.httpinterceptor.forwardingaddress orange.testlab.nhs.uk
+#tks.httpinterceptor.forwardingport 443
+
+# opentest
 #tks.httpinterceptor.forwardingaddress messagingportal.opentest.hscic.gov.uk
 #tks.httpinterceptor.forwardingport 19192
 
@@ -220,7 +229,7 @@ tks.httpinterceptor.inhibit.validation Y
 # added scf C means dump to console string can be concat of Y (log) and or C
 tks.debug.simulatordebugmode C
 # default is now 15000 
-tks.HttpTransport.pipeline.persistperiod 60000
+#tks.HttpTransport.pipeline.persistperiod 15000
 
 tks.HttpTransport.suppress.close Y
 
