First cut at 1.6

--- a/tkw-x-forwarding.properties
+++ b/tkw-x-forwarding.properties
@@ -21,7 +21,7 @@ tks.receivetls No
 tks.sendtls No
 #
 # If we do, these govern the keystore and CA locations and access
-# nb if run form a docker image these values are overriddeny by envt variables in the docker-compose yml file
+# nb if run from a docker image these values are overridden by envt variables in the docker-compose yml file
 #
 #tks.tls.truststore TKW_ROOT/config/GP_CONNECT/certs/tls.jks
 #tks.tls.truststore TKW_ROOT/config/GP_CONNECT/certs/opentest.jks
