--- a/tkw-x.properties
+++ b/tkw-x.properties
@@ -14,7 +14,7 @@ tks.username __USER_NAME_AND_ORGANISATION_NOT_SET__
 # Do we listen for or send over TLS ?
 #
 tks.receivetls No
-tks.sendtls Yes
+tks.sendtls No
 #
 # If we do, these govern the keystore and CA locations and access
 #
@@ -53,10 +53,10 @@ tks.HttpTransport.adminlistenaddr localhost
 tks.HttpTransport.adminlistenport 8001
 #
 # The Http interceptor requires a forwarder address and port for passing requests on 
-#tks.httpinterceptor.forwardingaddress 127.0.0.1
-#tks.httpinterceptor.forwardingport 5000
-tks.httpinterceptor.forwardingaddress orange.testlab.nhs.uk
-tks.httpinterceptor.forwardingport 443
+tks.httpinterceptor.forwardingaddress 127.0.0.1
+tks.httpinterceptor.forwardingport 5000
+#tks.httpinterceptor.forwardingaddress orange.testlab.nhs.uk
+#tks.httpinterceptor.forwardingport 443
 #tks.httpinterceptor.forwardingaddress messagingportal.opentest.hscic.gov.uk
 #tks.httpinterceptor.forwardingport 19192
 # xpath to text defining subfolder name for validation logs
